# podserv-b

./: .gitignore  CLAUDE.md  Cargo.toml  Config.toml  README.md  counts.json  flake.nix
.github/workflows/: linux.yml  nix.yml  rust.yml
packaging/archlinux/: .SRCINFO  PKGBUILD  podserv-b.install
packaging/gentoo/media-sound/podserv-b/: Manifest  metadata.xml  podserv-b-9999.ebuild
packaging/nginx/: podserv-b.conf
packaging/systemd/: podserv-b.service
src/: config.rs  counts.rs  main.rs  media.rs  render.rs  rss.rs
