# Copyright (c) 2026 l5yth
# SPDX-License-Identifier: Apache-2.0

[package]
name = "podserv-b"
version = "0.1.2"
edition = "2024"
description = "a minimalist podcast server (type b) for serving media files on the web"
license = "Apache-2.0"
repository = "https://github.com/l5yth/podserv-b"

[dependencies]
toml = "1.0"
actix-web = "4"
actix-files = "0.6"
actix-governor = "0"
clap = { version = "4", features = ["derive", "env"] }
id3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
